--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -2,8 +2,8 @@
 
 .container {
 	position: relative;
-	width: 800px;
-	height: 550px;
+	width: 80rem;
+	height: 55rem;
 	background-color: #fff;
 	border: 1px solid $soft-gray;
 	overflow: hidden;
@@ -82,45 +82,45 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		padding: 50px;
+		padding: 5rem;
 		transition: 0.5s;
 
 		.form-box__form {
 			.form-box__title {
-				font-size: 25px;
+				font-size: 2.5rem;
 				font-weight: 600;
 				text-transform: uppercase;
-				letter-spacing: 2px;
+				letter-spacing: 0.2rem;
 				text-align: center;
 				width: 100%;
-				margin-bottom: 12px;
+				margin-bottom: 1.2rem;
 				color: $title;
 			}
 
 			input {
 				position: relative;
 				width: 100%;
-				padding: 10px 7px;
+				padding: 1rem 0.7rem;
 				color: #333;
-				border-bottom: 0.5px solid $border-gray;
+				border-bottom: 0.05rem solid $border-gray;
 				outline: none;
 				box-shadow: none;
-				margin: 12px 0 0 0;
-				font-size: 15px;
-				letter-spacing: 1px;
+				margin: 1.2rem 0 0 0;
+				font-size: 1.5rem;
+				letter-spacing: 0.1rem;
 				font-weight: 300;
 
 				&[type="submit"] {
-					margin: 20px 0 0 0;
+					margin: 2rem 0 0 0;
 					max-width: 100%;
-					height: 50px;
+					height: 5rem;
 					background: $header-button;
 					border: none;
 					color: #fff;
 					cursor: pointer;
-					font-size: 15px;
+					font-size: 1.5rem;
 					font-weight: 500;
-					letter-spacing: 1px;
+					letter-spacing: 0.1rem;
 					transition: 0.5s;
 
 					&:hover,
@@ -132,9 +132,9 @@
 
 			.sign__text {
 				position: relative;
-				margin-top: 18px;
-				font-size: 13px;
-				letter-spacing: 1px;
+				margin-top: 1.8rem;
+				font-size: 1.3rem;
+				letter-spacing: 0.1rem;
 				color: $gray;
 				text-transform: uppercase;
 				font-weight: 300;
@@ -155,7 +155,7 @@
 
 @media (max-width: 991px) {
 	section .container {
-		max-width: 400px;
+		max-width: 40rem;
 
 		.image-box {
 			display: none;
