--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -14,13 +14,13 @@ header
                         span.id=user.id
                 ul
                     if !user
-                        //- li
-                        //-     a.calendar__link(href=routes.calendar) 달력 
+                        li
+                            a.calendar__link(href=routes.calendar) 달력 
                         li
                             a.calendar__link(href=routes.plans) 할 일 
                     else
-                        //- li
-                        //-     a.calendar__link(href=routes.calendar) 달력 
+                        li
+                            a.calendar__link(href=routes.calendar) 달력 
                         li
                             a.calendar__link(href=routes.plans) 할 일 
                 ul
