feat: plans.js 번들 따로 생성
plans 파일의 js코드가 main 파일에서 동작하여 오류 발생 및 calendar.js
파일이 동작하지 않는 문제가 발생
해당 문제 해결을 위해 plans.js 번들을 따로 생성하여 필요한 페이지에서만
동작하도록 script 추가

--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -32,7 +32,25 @@ block content
                                         p.description 입력창 왼쪽 버튼을 눌러 입력해주세요.
                         .todolist-box
                             ul.todolist(id=`todolist${i}`)
+                                - let data = []
                                 - if (user.plans!=null)
+                                    //- each item in user.plans
+                                    //-     - if (thisWeek.year[i]==item.year && thisWeek.month[i]==item.month && thisWeek.date[i]==item.date)
+                                    //-         - data += item
+                                    //- each i in data.length ? data : ['There are no values']
+                                    //-     p=i
+                                    //- each item in data
+                                        //- - if (item.time=="am")
+                                            +planBlock(
+                                                i,
+                                                {
+                                                id:item._id,
+                                                title:item.title,
+                                                content:item.content,
+                                                important:item.important,
+                                                completed:item.completed,
+                                                feedback:item.feedback,
+                                            })
                                     each item in user.plans
                                         - if (thisWeek.year[i]==item.year && thisWeek.month[i]==item.month && thisWeek.date[i]==item.date)
                                             +planBlock(
@@ -130,3 +148,4 @@ block content
                                     input(type="hidden", name="month", value=thisWeek.month[i])
                                     input(type="hidden", name="date", value=thisWeek.date[i])
         a.next__btn > 
+        script(src="../static/plans.js")
