--- a/src/views/calendar.pug
+++ b/src/views/calendar.pug
@@ -20,103 +20,7 @@ block content
                             th 목
                             th 금
                             th 토
-                    tbody
-                        tr.date__tr
-                            td 1
-                            td 2
-                            td 3
-                            td 4
-                            td 5
-                            td 6
-                            td 7
-                        tr.record__tr
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                        tr.date__tr
-                            td 1
-                            td 2
-                            td 3
-                            td 4
-                            td 5
-                            td 6
-                            td 7
-                        tr.record__tr
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                        tr.date__tr
-                            td 1
-                            td 2
-                            td 3
-                            td 4
-                            td 5
-                            td 6
-                            td 7
-                        tr.record__tr
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                        tr.date__tr
-                            td 1
-                            td 2
-                            td 3
-                            td 4
-                            td 5
-                            td 6
-                            td 7
-                        tr.record__tr
-                            td 💛💚
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 민지 생일
-                            td 
-                        tr.date__tr
-                            td 1
-                            td 2
-                            td 3
-                            td 4
-                            td 5
-                            td 6
-                            td 7
-                        tr.record__tr
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                        tr.date__tr
-                            td 1
-                            td 2
-                            td 3
-                            td 4
-                            td 5
-                            td 6
-                            td 7
-                        tr.record__tr
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
-                            td 
+                    tbody.date
         a.next__btn > 
     //- button.type__button(type="button") 할 일
     // 버튼 클릭하면 할 일이 보이고 버튼 내용은 일기로 변함, 또 누르면 반대로
