style: 변수명 수정

--- a/src/views/calendar.pug
+++ b/src/views/calendar.pug
@@ -5,11 +5,12 @@ block content
         a.prev__btn <
         .content
             .day
-                h1.day__title 2일 월요일
-                .day__content
+                h1.day__h1 2일 월요일
+                .day-sentence
+                .day-content
                     // 그 날의 한 일/할 일
             .calendar
-                h1.calendar__title 2021년 8월
+                h1.calendar__h1 2021년 8월
                 table.calendar__table
                     thead
                         tr.day__tr
