--- a/src/assets/scss/calendar.scss
+++ b/src/assets/scss/calendar.scss
@@ -33,6 +33,11 @@ section {
             text-align: center;
             width: 50%;
             height: 100%;
+
+            .day__h1 {
+                font-size: 2rem;
+                margin: 3.8rem 0 1.8rem 0;
+            }
         }
 
         .calendar {
@@ -42,7 +47,7 @@ section {
             width: 50%;
             height: 100%;
 
-            &__title {
+            &__h1 {
                 font-size: 2.5rem;
                 font-weight: 600;
                 margin: 3.8rem 0 1.8rem 0;
@@ -56,25 +61,47 @@ section {
                     height: 2.5rem;
                     font-weight: 600;
                 }
-                
-                td .calendar-off {
-                    color: red;
-                }
 
-                td .calendar-day {
-                    width: 100px;
-                    height: 3.5rem;
-                    vertical-align: middle;
-                    display: table-cell;
-                }
+                .date__tr {
+                    td {
+                        cursor: pointer;
 
-                .content {
-                    height: 5.5rem;
-                    width: 100%;
-                    font-size: 1.15rem;
-                    vertical-align: top;
-                    border: none;
-                    background-color: rgba(255, 255, 255, 0.2);
+                        &:hover {
+                            .calendar-day {
+                                border-radius: 2rem;
+                                background-color: rgba(255, 255, 255, 0.5);
+                                position: relative;
+                                left: 52%;
+                                bottom: 17%;
+                                width: 2.6rem;
+                                height: 2.6rem;
+                            }
+                            
+                            .content {
+                                box-shadow: inset 0 -5px 0 #ffffee; 
+                            }
+                        }
+
+                        .calendar-off {
+                            color: red;
+                        }
+
+                        .calendar-day {
+                            width: 100px;
+                            height: 3.5rem;
+                            vertical-align: middle;
+                            display: table-cell;
+                        }
+                    }
+
+                    .content {
+                        height: 5.5rem;
+                        width: 100%;
+                        font-size: 1.15rem;
+                        vertical-align: top;
+                        border: none;
+                        background-color: rgba(255, 255, 255, 0.2);
+                    }
                 }
             }
         }
