--- a/src/views/calendar.pug
+++ b/src/views/calendar.pug
@@ -6,9 +6,11 @@ block content
         .content
             .day
                 h1.day__h1 2일 월요일
-                .day-sentence
-                .day-content
+                .day-sentence 
+                ul.day-content
                     // 그 날의 한 일/할 일
+                    li 오늘 한 일
+                    li 오늘 한 일
             .calendar
                 h1.calendar__h1 2021년 8월
                 table.calendar__table
