--- a/src/assets/scss/config/_variables.scss
+++ b/src/assets/scss/config/_variables.scss
@@ -14,6 +14,7 @@ $border-deep: rgb(142, 187, 134);
 $fill: rgb(184, 219, 163);
 $hover: rgb(234, 243, 225);
 $hover-soft: rgba(234, 243, 225, 0.568);
+$text-soft: #6c9c64;
 $text: rgb(98, 150, 89);
 $text-deep: rgb(87, 133, 79);
 // $text-deep2: rgb(84, 110, 79);
