--- a/src/assets/scss/calendar.scss
+++ b/src/assets/scss/calendar.scss
@@ -51,8 +51,22 @@ section {
                 margin: auto;
                 
                 li {
+                    padding: 3px 0;
                     margin-bottom: 5px;
                     text-align: left;
+
+                    // 버튼용 이미지
+                    .plan-check__image,
+                    img {
+                        width: 1.5rem;
+                        margin-right: 5px;
+                        opacity: 0.83;
+                    }
+                    
+                    span {
+                        position: relative;
+                        bottom: 3px;
+                    }
                 }
             }
         }
