feat: 공통 scss 추가 및 기존 scss 수정
- !important 설정할 생각을 못해서 display: none 설정(hidden class)을 필요한
class마다 중복 작성했었는데, commons.scss로 한번에 작성
- 버튼용 이미지에서 공통 적용되는 사이즈 및 opacity를 common.scss에 분리
- 그 외 calendar에서 제대로 적용되도록 scss 수정 및 추가

--- a/src/assets/scss/calendar.scss
+++ b/src/assets/scss/calendar.scss
@@ -42,25 +42,32 @@ section {
             &-sentence {
                 padding: 8px 5px;
                 margin-bottom: 10px;
+                // background-color: $text-soft;
+                // color: white;
+            }
+
+            &-rate {
+                height: 1rem;
+                margin: 0.5rem 0;
                 background-color: $text-soft;
                 color: white;
             }
 
             &-content {
-                width: 36rem;
+                width: 37.5rem;
                 margin: auto;
                 
                 li {
-                    padding: 3px 0;
-                    margin-bottom: 5px;
+                    padding-top: 0.3rem;
+                    margin: 0.7rem 0;
                     text-align: left;
 
-                    // 버튼용 이미지
-                    .plan-check__image,
-                    img {
-                        width: 1.5rem;
+                    .more__button {
+                        float: right;
+                    }
+
+                    .plan-check__image {
                         margin-right: 5px;
-                        opacity: 0.83;
                     }
                     
                     span {
