--- a/src/assets/scss/calendar.scss
+++ b/src/assets/scss/calendar.scss
@@ -130,15 +130,31 @@ section {
                             vertical-align: middle;
                             display: table-cell;
                         }
+
+                        .content {
+                            height: 5.5rem;
+                            width: 100%;
+                            font-size: 1.15rem;
+                            vertical-align: top;
+                            border: none;
+                            background-color: rgba(255, 255, 255, 0.2);
+                        }
                     }
 
-                    .content {
-                        height: 5.5rem;
-                        width: 100%;
-                        font-size: 1.15rem;
-                        vertical-align: top;
-                        border: none;
-                        background-color: rgba(255, 255, 255, 0.2);
+                    .clicked-td {
+                        .calendar-day {
+                            border-radius: 2rem;
+                            background-color: rgba(255, 255, 255, 0.5);
+                            position: relative;
+                            left: 52%;
+                            bottom: 17%;
+                            width: 2.6rem;
+                            height: 2.6rem;
+                        }
+                        
+                        .content {
+                            box-shadow: inset 0 -5px 0 #ffffee; 
+                        }
                     }
                 }
             }
