feat: 달력 날짜 선택 전 커버 추가
- 날짜를 클릭하면 해당 날짜의 정보를 보여주는데, 기본적으로는 해당 월의
  정보를 보여주기 위해 커버 추가 (.non-clicked-day)
- 날짜 클릭 시 해당 날짜 정보 보여주도록 js 추가
- 커버 추가에 따라 기존 class명 수정 (.day -> .clicked-day)

--- a/src/assets/scss/calendar.scss
+++ b/src/assets/scss/calendar.scss
@@ -27,7 +27,7 @@ section {
 		overflow: hidden;
         border: 1px solid $border;
 
-        .day {
+        .clicked-day {
             float: left;
             background: white;
             text-align: center;
@@ -64,6 +64,10 @@ section {
 
                     .more__button {
                         float: right;
+
+                        img {
+                            width: 1.5rem;
+                        }
                     }
 
                     .plan-check__image {
@@ -76,6 +80,14 @@ section {
                     }
                 }
             }
+        }
+
+        .non-clicked-day {
+            float: left;
+            background: white;
+            text-align: center;
+            width: 50%;
+            height: 100%;
         }
 
         .calendar {
