--- a/src/assets/scss/calendar.scss
+++ b/src/assets/scss/calendar.scss
@@ -88,6 +88,16 @@ section {
             text-align: center;
             width: 50%;
             height: 100%;
+
+            .month {
+                &-plan-number {
+                    img {
+                        margin: 0.6rem 0.5rem 0 0;
+                        position: relative;
+                        top: 0.2rem;
+                    }
+                }
+            }
         }
 
         .calendar {
